addTest: Fixed mutlithreading test run.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
-target/
+##############################
+## Java
+##############################
 *.class
-/.idea
-/out
-/bin/
+*.jar
+
+##############################
+## Maven
+##############################
+target/
+
+##############################
+## IntelliJ
+##############################
+out/
+.idea/
 *.iml
